hphp/hack/test/typecheck/nonnull/accessing_type_constant_of_nonnull.php
<?hh

type N = nonnull;

function f(N::C $x): void {}
